# GPS

./: .autotools  .cproject  .project  Makefile  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.3
build-ARM_Optimize/: Makefile  config.status
build-ARM_Optimize/src/: Makefile  gps
build-ARM_Optimize/src/.deps/: context.Po  generate.Po  generator.Po  gmath.Po  info.Po  main.Po  parse.Po  parser.Po  sentence.Po  time.Po  tok.Po
src/: Coordinate.cpp  Coordinate.h  Display.cpp  Display.h  LCDDisplay.cpp  LCDDisplay.h  Makefile  Makefile.am  Makefile.in  NCursesDisplay.cpp  NCursesDisplay.h  main.cc
src/.deps/: Display.Po  LCDDisplay.Po  NCursesDisplay.Po  context.Po  generate.Po  generator.Po  gmath.Po  info.Po  main.Po  parse.Po  parser.Po  sentence.Po  time.Po  tok.Po
